# openretriver

./: .gitignore  Lesson.md  Makefile  Readme.md  pyproject.toml
src/: change_detection.py  chunker_code.py  chunker_docs.py  embedder.py  loader.py  models.py  pipeline.py  storage.py
tests/: conftest.py  test_change_detection.py  test_chunker_code.py  test_chunker_docs.py  test_embedder.py  test_loader.py  test_models.py  test_pipeline.py  test_storage.py
