[project]
name = "openretriver"
version = "0.1.0"
description = "Document and code ingestion pipeline for open source projects"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.8.0",
    "qdrant-client>=1.18.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-typescript>=0.23.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
